# rustle

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  claude_plan.md  plan.md  pyproject.toml  rust-toolchain.toml  rustle
contracts/amm/: Cargo.toml
contracts/amm/src/: lib.rs
detectors/: Cargo.toml  Makefile  lock-callback.py  non-callback-private.py  non-private-callback.py  unused-ret.py
detectors/all_call/: Cargo.toml
detectors/callback/: Cargo.toml
detectors/callback_panic/: Cargo.toml
detectors/complex_loop/: Cargo.toml
detectors/div_before_mul/: Cargo.toml
detectors/ext_call/: Cargo.toml
detectors/ext_call_trait/: Cargo.toml
detectors/missing_owner_check/: Cargo.toml
detectors/near_core/: Cargo.toml
detectors/nep_interface/: Cargo.toml
detectors/nft_approval_check/: Cargo.toml
detectors/nft_owner_check/: Cargo.toml
detectors/prepaid_gas/: Cargo.toml
detectors/promise_chain/: Cargo.toml
detectors/promise_result/: Cargo.toml
detectors/reentrancy/: Cargo.toml
detectors/round/: Cargo.toml
detectors/self_transfer/: Cargo.toml
detectors/state_change_before_call/: Cargo.toml
detectors/storage_gas/: Cargo.toml
detectors/struct_member/: Cargo.toml
detectors/timestamp/: Cargo.toml
detectors/transfer/: Cargo.toml
detectors/unchecked_promise_result/: Cargo.toml
detectors/unclaimed_storage_fee/: Cargo.toml
detectors/unhandled_promise/: Cargo.toml
detectors/unregistered_receiver/: Cargo.toml
detectors/unsafe_math/: Cargo.toml
detectors/unsaved_changes/: Cargo.toml
detectors/upgrade_func/: Cargo.toml
(+134 files in other folders)
