[package]
name = "amm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5", features = ["legacy"] }
near-contract-standards = "5"
borsh = { version = "1", features = ["derive"] }

[profile.release]
overflow-checks = true
panic = "abort"
